tests/sumo/extended/vaporizer/errors/id_empty/errors.sumo
Warning: Vaporizers are deprecated. Use rerouters instead.
Error: Attribute 'id' in definition of a vaporizer is empty.
Quitting (on error).
